@startuml PMA_ER_Diagram
' Personalized Medical Assistant - Entity Relationship Diagram
' Generated: November 7, 2025
' To use in draw.io: Arrange → Insert → Advanced → PlantUML

title Personalized Medical Assistant\nEntity Relationship Diagram

' Professional colorful styling
skinparam dpi 150
skinparam backgroundColor #F8F9FA

skinparam entity {
    BorderThickness 2
    FontSize 10
    FontStyle bold
}

skinparam arrow {
    FontSize 9
    Thickness 2
}

' ============ Core Entities ============

entity "User" as User #4A90E2 {
    * **id** : INT <<PK>>
    --
    * username : VARCHAR(150)
    * password : VARCHAR(128)
    * email : VARCHAR(254)
    first_name : VARCHAR(150)
    last_name : VARCHAR(150)
    is_staff : BOOLEAN
    is_active : BOOLEAN
    date_joined : DATETIME
    last_login : DATETIME
}

entity "PatientProfile" as Patient #90CAF9 {
    * **id** : INT <<PK>>
    --
    * user_id : INT <<FK>>
    * full_name : VARCHAR(200)
    age : INT
    height : FLOAT
    weight : FLOAT
    blood_group : VARCHAR(5)
    medical_history : TEXT
    allergies : TEXT
    current_medications : TEXT
    bmi : FLOAT
    bmi_status : VARCHAR(20)
    created_at : DATETIME
    updated_at : DATETIME
}

entity "DoctorProfile" as Doctor #66BB6A {
    * **id** : INT <<PK>>
    --
    * user_id : INT <<FK>>
    * full_name : VARCHAR(200)
    * specialization : VARCHAR(100)
    * license_number : VARCHAR(50)
    years_of_experience : INT
    hospital_clinic : VARCHAR(200)
    address : TEXT
    phone_number : VARCHAR(15)
    consultation_fee : DECIMAL(10,2)
    about : TEXT
    qualifications : TEXT
    is_available : BOOLEAN
    created_at : DATETIME
    updated_at : DATETIME
}

entity "MedicalRecord" as Record #FFB74D {
    * **id** : INT <<PK>>
    --
    * patient_id : INT <<FK>>
    * title : VARCHAR(200)
    record_type : VARCHAR(50)
    description : TEXT
    file : VARCHAR(100)
    date_created : DATE
    uploaded_at : DATETIME
}

entity "DiseasePrediction" as Prediction #AB47BC {
    * **id** : INT <<PK>>
    --
    * patient_id : INT <<FK>>
    * symptoms : TEXT
    * predicted_disease : VARCHAR(200)
    confidence_score : FLOAT
    recommended_medicines : TEXT
    recommended_diet : TEXT
    doctor_notes : TEXT
    created_at : DATETIME
}

entity "Appointment" as Appointment #EF5350 {
    * **id** : INT <<PK>>
    --
    * patient_id : INT <<FK>>
    * doctor_id : INT <<FK>>
    * appointment_date : DATE
    * appointment_time : TIME
    reason : TEXT
    status : VARCHAR(20)
    doctor_notes : TEXT
    created_at : DATETIME
    updated_at : DATETIME
}

entity "Message" as Message #26C6DA {
    * **id** : INT <<PK>>
    --
    * appointment_id : INT <<FK>>
    * sender_id : INT <<FK>>
    * recipient_id : INT <<FK>>
    subject : VARCHAR(200)
    content : TEXT
    is_read : BOOLEAN
    is_edited : BOOLEAN
    is_deleted : BOOLEAN
    edit_count : INT
    created_at : DATETIME
    updated_at : DATETIME
}

entity "MedicineReminder" as Reminder #FFA726 {
    * **id** : INT <<PK>>
    --
    * patient_id : INT <<FK>>
    * medicine_name : VARCHAR(200)
    dosage : VARCHAR(100)
    frequency : VARCHAR(50)
    time_1 : TIME
    time_2 : TIME
    time_3 : TIME
    time_4 : TIME
    start_date : DATE
    end_date : DATE
    notes : TEXT
    is_active : BOOLEAN
    created_at : DATETIME
}

' ============ Relationships ============

' User to Patient (One-to-One)
User ||--o| Patient : "has profile"

' User to Doctor (One-to-One)
User ||--o| Doctor : "has profile"

' Patient to Medical Records (One-to-Many)
Patient ||--o{ Record : "uploads"

' Patient to Disease Predictions (One-to-Many)
Patient ||--o{ Prediction : "receives"

' Patient to Appointments (One-to-Many)
Patient ||--o{ Appointment : "books"

' Doctor to Appointments (One-to-Many)
Doctor ||--o{ Appointment : "attends"

' Appointment to Messages (One-to-Many)
Appointment ||--o{ Message : "contains"

' User to Messages as Sender (One-to-Many)
User ||--o{ Message : "sends"

' User to Messages as Recipient (One-to-Many)
User ||--o{ Message : "receives"

' Patient to Reminders (One-to-Many)
Patient ||--o{ Reminder : "sets"

' ============ Notes ============
note right of User
**Core Django User Model**
Authentication & Authorization
end note

note right of Patient
**Patient Module**
Stores patient medical info
Calculates BMI automatically
end note

note right of Doctor
**Doctor Module**
Medical professionals
Manages availability
end note

note bottom of Prediction
**ML Module**
AI-powered predictions
Multiple ML models
end note

@enduml
